[package]
description = "Derivation of ECDSA private keys from arbitrary seeds, using FIPS 186-5 methods only"
edition = "2024"
license-file = "LICENSE"
name = "det-keygen"
repository = "https://github.com/yawn/det-keygen"
version = "0.1.0"

[lib]

[dependencies]
crypto-bigint = { version = "0.6", default-features = false }
ring = { version = "0.17", optional = true }

[dev-dependencies]
base64 = "0.22"
elliptic-curve = { version = "0.13", features = ["pkcs8"] }
p256 = "0.13"
pkcs8 = "0.10"
proptest = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["ring"]
ring = ["dep:ring"]
